--- a/Data_visualization/1.1-Introduction.qmd
+++ b/Data_visualization/1.1-Introduction.qmd
@@ -12,6 +12,7 @@ format:
     logo: QMLS_Logo.png
     slide-number: true
     show-slide-number: all
+    link-external-newwindow: true
 ---
 
 ## Module overview
@@ -33,6 +34,7 @@ ggplot2::theme_set(theme_cowplot())
 4. Designing reusable plotting code
 5. Finishing touches
 
+
 ## Module prerequisites
 
 - *Quantitative Methods in Life Sciences I*
@@ -40,13 +42,15 @@ ggplot2::theme_set(theme_cowplot())
 - Basics of data import and manipulation
 - Basics of `ggplot`
 
+
 ## Relevant *Quantitative Methods I* course materials
 
 - Week 2: Data organization, loading, visualization
 - Week 3: Tidy data and transformations
 - [Course files on Github](https://github.com/kmiddleton/quant_methods)
   - Clone to your computer for reference
-- [Course videos on Youtube](https://www.youtube.com/playlist?list=PLeIk-G-wZpqx1yW49XAHqoccBXhNJrUSu) 
+- [Course videos on YouTube](https://www.youtube.com/playlist?list=PLeIk-G-wZpqx1yW49XAHqoccBXhNJrUSu) 
+
 
 ## Resources
 
@@ -57,8 +61,8 @@ ggplot2::theme_set(theme_cowplot())
 - [Data Visualization: A Practical Introduction](https://socviz.co/index.html#preface)
 - [ggplot2 cheatsheet](https://www.maths.usyd.edu.au/u/UG/SM/STAT3022/r/current/Misc/data-visualization-2.1.pdf)
 - [Tidyverse style guide](https://style.tidyverse.org/)
+- [The Work of Edward Tufte](https://www.edwardtufte.com/tufte/)
 
-## Graphics vs. infographics
 
 ## What we cover and don't cover
 
@@ -71,10 +75,12 @@ Don't:
 
 - Every possible use case
 
+
 ## Dual motivations for this module
 
-1. Thinking about what "story" you want to tell with your plots
+1. Thinking about what "story" you want to tell with your plots / figures / images
 2. Learning about the details of how to show what you want to show.
+
 
 ## Plotting options in R
 
@@ -83,6 +89,7 @@ Don't:
 - `ggplot` and the `tidyverse`
 
 For entertainment: [http://varianceexplained.org/r/why-I-use-ggplot2/](http://varianceexplained.org/r/why-I-use-ggplot2/)
+
 
 ## Packages we will use often
 
@@ -94,6 +101,7 @@ For entertainment: [http://varianceexplained.org/r/why-I-use-ggplot2/](http://va
 - [patchwork](https://patchwork.data-imaginist.com/) Compositing and refining plots
 - [paletteer](https://emilhvitfeldt.github.io/paletteer/) Unifies color palette options
 
+
 ## Why visualize data? {.scrollable}
 
 ```{r}
@@ -102,6 +110,7 @@ ds <- read_csv("Data/Datasaurus_data.csv",
                show_col_types = FALSE)
 knitr::kable(ds)
 ```
+
 
 ## Why visualize data? {.scrollable}
 
@@ -122,6 +131,7 @@ What is the correlation?
 with(ds, cor.test(x1, x2))
 ```
 
+
 ## Visualization reveals patterns
 
 ```{r}
@@ -132,6 +142,7 @@ ggplot(ds, aes(x = x1, y = x2)) +
   coord_fixed() +
   labs(title = expression(paste("Alberto Cairo's ",italic("Datasaurus"))))
 ```
+
 
 ## Presentation-quality plots
 
