--- a/Data_visualization/1.2-Plot_styles.qmd
+++ b/Data_visualization/1.2-Plot_styles.qmd
@@ -11,6 +11,7 @@ format:
     logo: QMLS_Logo.png
     slide-number: true
     show-slide-number: all
+    link-external-newwindow: true
 ---
 
 ## General caveat to keep in mind
@@ -24,6 +25,7 @@ Many ways to accomplish the same goal in R / ggplot.
   - Pre-compute quantities or use a within-plot function?
 
 Our way might not be the "best" way (for some definition of "best").
+
 
 ## Plots convey information
 
@@ -41,6 +43,7 @@ ggplot2::theme_set(theme_cowplot())
 
 First think about what information you want to convey to yourself or the reader.
 
+
 ## Kinds of data
 
 - Numerical / Quantitative
@@ -49,6 +52,7 @@ First think about what information you want to convey to yourself or the reader.
   - Unordered, ordered / nominal
 
 The type of data gives clues about what plots will show, how you set them up, and what elements they include.
+
 
 ## `palmerpenguins`
 
@@ -67,6 +71,7 @@ penguins <- penguins |>
 names(penguins)
 ```
 
+
 ## `palmerpenguins` {.smaller}
 
 Mix of categorical (`species`, `island`, `sex`) and continuous (`bill...`, `flipper_length_mm`, `body_mass_g`) variables
@@ -78,6 +83,7 @@ Mix of categorical (`species`, `island`, `sex`) and continuous (`bill...`, `flip
 penguins
 ```
 
+
 ## `palmerpenguins`
 
 Explore:
@@ -88,7 +94,8 @@ penguins |>
   count()
 ```
 
-## A (not exhaustive) menu of plot elements (`geoms`)
+
+## A (not exhaustive) menu of plot elements (`geom`s)
 
 - points
 - lines (straight, curved)
@@ -97,12 +104,14 @@ penguins |>
 - boxes
 - annotations
 
+
 ## What information do I want to convey?
 
 - Associations between measurements
 - Differences in measurements between species
 - Differences in measurements between sexes (within species?)
 - Changes in measurements across time
+
 
 ## Associations between measurements
 
@@ -114,6 +123,7 @@ penguins |>
   labs(x = "Body Mass (g)", y = "Bill Length (mm)")
 ```
 
+
 ## Associations between measurements
 
 ```{r}
@@ -124,6 +134,7 @@ penguins |>
   labs(x = "Body Mass (g)", y = "Bill Length (mm)") +
   scale_color_paletteer_d(`"beyonce::X56"`, name = "Species")
 ```
+
 
 ## Associations between measurements
 
@@ -137,6 +148,7 @@ penguins |>
   facet_grid(sex ~ .)
 ```
 
+
 ## Differences in measurements between species
 
 ```{r}
@@ -148,6 +160,7 @@ penguins |>
   scale_color_paletteer_d(`"beyonce::X56"`, name = "Species") +
   scale_shape_manual(values = c(1, 16), name = "Sex")
 ```
+
 
 ## Differences in measurements between sexes within species
 
@@ -162,6 +175,7 @@ penguins |>
   scale_shape_manual(values = c(1, 16), name = "Sex")
 ```
 
+
 ## Changes in measurements across time
 
 ```{r}
@@ -175,6 +189,7 @@ penguins |>
   scale_shape_manual(values = c(1, 16), name = "Sex") +
   facet_grid(species ~ sex)
 ```
+
 
 ## Plots gone wrong
 
