--- a/Data_visualization/2.3-Theming.qmd
+++ b/Data_visualization/2.3-Theming.qmd
@@ -11,6 +11,7 @@ format:
     logo: QMLS_Logo.png
     slide-number: true
     show-slide-number: all
+    link-external-newwindow: true
 ---
 
 ## What can you customize?
@@ -32,13 +33,25 @@ library(abdData)
 
 (Nearly) everything.
 
+
 ## Blank slate
+
+There is a ggplot here:
 
 ```{r}
 #| echo: true
 ggplot() +
   theme_void()
 ```
+
+
+## `gg`this and `gg`that
+
+- Lots of packages have plotting functionality built on top of `ggplot`
+- Not all play nicely with regular `ggplot` theme elements
+  - Can't `+` elements, etc.
+  - Your mileage may vary
+
 
 ## Scales
 
@@ -50,6 +63,7 @@ ggplot() +
 - `scale_fill_`
 - `scale_shape_`
 - etc.
+
 
 ## Types of scales
 
@@ -65,6 +79,7 @@ Different aesthetics have different scale types available
 
 - RStudio tab completion is your friend here: `scale_x`-[Tab]{style="color: #CB3570"}
 
+
 ## `scale_x_` and `scale_y_`
 
 Most commonly:
@@ -74,6 +89,7 @@ Most commonly:
 - `scale{xy}_log10`: log~10~ transformation
 - `scale{xy}_sqrt`: Square-root transformation
 - `scale{xy}_manual`: Manually specify parameters (e.g., color)
+
 
 ## Electric fish diversity and tributaries {.scrollable}
 
@@ -88,10 +104,12 @@ EF <- ElectricFish |>
 EF |> knitr::kable()
 ```
 
+
 ## Electric fish visualization
 
 1. Bar plot of `n_Upstream` and `n_Downstream` diversity by `Tributary`
 2. Scatter plot of `n_Upstream` vs. `n_Downstream`
+
 
 ## Bar plot
 
@@ -122,6 +140,7 @@ EF_bar
 
 :::
 
+
 ## Bar plot refinements
 
 ::: {.panel-tabset}
@@ -151,6 +170,7 @@ EF_bar
 
 :::
 
+
 ## Scatter plot
 
 ::: {.panel-tabset}
@@ -174,6 +194,7 @@ EF_scatter
 ```
 
 :::
+
 
 ## Scatter plot refinements
 
@@ -285,6 +306,7 @@ EF_bar_b
 - ggplot inherits the standard set of R point shapes
 - [Point shapes in R](https://r-graphics.org/recipe-scatter-shapes)
 
+
 ## `scale_size_`
 
 ::: {.panel-tabset}
@@ -318,6 +340,7 @@ EF_size
 
 :::
 
+
 ## `theme()` changes aspects of plots
 
 - Fully custom and reusing themes in a few weeks
@@ -327,6 +350,7 @@ EF_size
 ```{r}
 EF_bar
 ```
+
 
 ## Changing axis components
 
@@ -380,6 +404,7 @@ EF_size
 
 :::
 
+
 ## Customizing the legend
 
 ::: {.panel-tabset}
@@ -412,6 +437,34 @@ EF_scatter <- ggplot(EF, aes(x = n_Upstream,
 
 ```{r}
 EF_scatter
+```
+
+:::
+
+
+## Using `element_blank()` to remove plot elements
+
+::: {.panel-tabset}
+
+### Code
+
+- Remove the `x`-axis completely
+- Remove the space between the labels and bars
+
+```{r}
+#| echo: true
+#| message: false
+
+EF_bar_blank <- EF_bar +
+  scale_y_continuous(expand = c(0, 0)) +
+  theme(axis.ticks.x = element_blank(),
+        axis.line.x = element_blank())
+```
+
+### Plot
+
+```{r}
+EF_bar_blank
 ```
 
 :::
