Update weeks 1 and 2

--- a/Data_visualization/1.1-Introduction.qmd
+++ b/Data_visualization/1.1-Introduction.qmd
@@ -87,8 +87,7 @@ Don't:
 - Base R
 - Lattice
 - `ggplot` and the `tidyverse`
-
-For entertainment: [http://varianceexplained.org/r/why-I-use-ggplot2/](http://varianceexplained.org/r/why-I-use-ggplot2/)
+  - [ggplot Extensions](https://exts.ggplot2.tidyverse.org/gallery/)
 
 
 ## Packages we will use often
