--- a/Data_visualization/1.4-Ethics.qmd
+++ b/Data_visualization/1.4-Ethics.qmd
@@ -17,14 +17,65 @@ format:
 
 ## Responsibility
 
+```{r}
+#| label: setup
+#| echo: false
+#| warning: false
+#| message: false
+
+library(tidyverse)
+library(cowplot)
+library(colorblindr)
+ggplot2::theme_set(theme_cowplot())
+```
+
 - The first goal is honest communication
-- Not make the effect look big or small
+- Accurately and realistically represent the effect (or lack of)
 - Match your statistics
-- Digestible version leaves out important details
+- Digestible version often leaves out important details
 
 
 ## Readings
 
 - [Data science ethics](https://mdsr-book.github.io/mdsr2e/ch-ethics.html) in *Modern Data Science with R* by Baumer, Kaplan, and Horton
 - [The Ethics of Data Visualization](https://medium.com/@peter.haferl/the-ethical-responsibilities-of-data-visualization-4d12b7c9640d)
+
+## Example
+
+Two variables with a lot of samples. Similar means and standard deviations
+
+```{r}
+set.seed(436248)
+M <- tibble(x1 = rnorm(1e4, 90, 0.25),
+            x2 = rnorm(1e4, 90.5, 0.25))
+
+M
+
+M |> 
+  summarize(across(.fns = c(Mean = mean, SD = sd))) |> 
+  print(digits = 3)
+
+M <- M |> 
+  pivot_longer(cols = everything(), names_to = "Variable", values_to = "Value")
+```
+
+## Two ways to plot the same data
+
+```{r}
+p1 <- ggplot(M, aes(Value, color = Variable)) +
+  geom_line(stat = "density", size = 1.5) +
+  scale_color_OkabeIto() +
+  labs(x = "Meaurement", y = "Density",
+       title = "Default x Scale") +
+  theme(legend.position = c(0.8, 0.8))
+
+p2 <- ggplot(M, aes(Value, color = Variable)) +
+  geom_line(stat = "density", size = 1.5) +
+  scale_color_OkabeIto() +
+  scale_x_continuous(limits = c(80, 100)) +
+  labs(x = "Meaurement", y = "Density",
+       title = "x Scaled to Biological Range") +
+  theme(legend.position = c(0.8, 0.8))
+plot_grid(p1, p2, ncol = 2)
+```
 
