--- a/Data_visualization/1.3-Data_wrangling.qmd
+++ b/Data_visualization/1.3-Data_wrangling.qmd
@@ -51,83 +51,48 @@ penguins2 |>
 
 ## Bar charts for counts
 
-::: {.panel-tabset}
-
-### Code 
-
 ```{r}
 #| echo: true
-p <- ggplot(penguins2, aes(x = Species)) +
+#| output-location: slide
+ggplot(penguins2, aes(x = Species)) +
   geom_bar() +
   labs(y = "Count")
 ```
 
-### Plot
-
-```{r}
-p
-```
-
-:::
-
 
 ## Grouped bar charts
 
-::: {.panel-tabset}
-
-### Code 
-
 ```{r}
 #| echo: true
-p <- ggplot(penguins2, aes(x = Species, fill = Sex)) +
+#| output-location: slide
+ggplot(penguins2, aes(x = Species, fill = Sex)) +
   geom_bar(position = "dodge") +
   scale_fill_manual(values = c("navy", "darkred")) +
   labs(y = "Count")
 ```
 
-### Plot
-
-```{r}
-p
-```
-
-:::
-
+We will talk more about `position = "dodge"` next week.
 
 ## Grouped bar charts
 
-::: {.panel-tabset}
-
-### Code 
-
 ```{r}
 #| echo: true
-p <- ggplot(penguins2, aes(x = Species, fill = Island)) +
+#| output-location: slide
+ggplot(penguins2, aes(x = Species, fill = Island)) +
   geom_bar(position = "dodge") +
   labs(y = "Count") +
   facet_grid(Sex ~ .) +
   scale_fill_paletteer_d(`"beyonce::X56"`)
 ```
 
-### Plot
-
-```{r}
-p
-```
-
-:::
-
 
 ## Stacked bar charts
 
-::: {.panel-tabset}
-
-### Code 
-
 ```{r}
 #| echo: true
+#| output-location: slide
 #| code-line-numbers: "|2|6"
-p <- ggplot(penguins2, aes(x = Species, fill = Island)) +
+ggplot(penguins2, aes(x = Species, fill = Island)) +
   geom_bar(position = "fill") +
   labs(y = "Count") +
   facet_grid(Sex ~ .) +
@@ -135,20 +100,11 @@ p <- ggplot(penguins2, aes(x = Species, fill = Island)) +
   scale_y_continuous(name = "Percent", labels = scales::percent)
 ```
 
-### Plot
-
-```{r}
-p
-```
-
-:::
-
 
 ## Aggregating to get counts
 
 ```{r}
 #| echo: true
-
 penguin_counts <- penguins2 |> 
   group_by(Species, Island, Sex) |> 
   count()
@@ -161,11 +117,10 @@ penguin_counts
 ```
 
 
-## Aggregating counts
+## Aggregating to get counts 2
 
 ```{r}
 #| echo: true
-
 penguin_counts_by_year <- penguins2 |> 
   group_by(Species, Island, Sex, Year) |> 
   count()
@@ -193,68 +148,44 @@ gala2 |> knitr::kable()
 
 ## Bar charts for aggregated data
 
-::: {.panel-tabset}
-
-### Code 
+`stat = "identity"` tells `ggplot` to use the value as is.
 
 ```{r}
 #| echo: true
+#| output-location: slide
 #| code-line-numbers: "2"
-p <- ggplot(gala2, aes(x = Island, y = Species)) +
+ggplot(gala2, aes(x = Island, y = Species)) +
   geom_bar(stat = "identity") +
   theme(axis.text.x = element_text(angle = 90,
                                    hjust = 1, vjust = 0.5))
 ```
 
-### Plot
 
-```{r}
-p
-```
-
-:::
-
-
-## Bar charts for counts
-
-::: {.panel-tabset}
-
-### Code 
-
-Arranging `Species` counts.
+## Arranging `Species` counts
 
 ```{r}
 #| echo: true
+#| output-location: slide
 #| code-line-numbers: "2"
-p <- gala2 |> 
+gala2 |> 
   arrange(desc(Species)) |> 
   ggplot(aes(x = Island, y = Species)) +
   geom_bar(stat = "identity") +
   theme(axis.text.x = element_text(angle = 90,
-                                   hjust = 1, vjust = 0.5))
+                                   hjust = 1,
+                                   vjust = 0.5))
 ```
 
-### Plot
 
-```{r}
-p
-```
+## Explicitly defining factors
 
-:::
-
-
-## Bar charts for counts
-
-::: {.panel-tabset}
-
-### Code 
-
-Explicitly defining factors.
+`ggplot` converts `chr` to factors when used as a factor.
 
 ```{r}
 #| echo: true
+#| output-location: slide
 #| code-line-numbers: "3"
-p <- gala2 |> 
+gala2 |> 
   arrange(desc(Species)) |> 
   mutate(Island = fct_inorder(Island)) |> 
   ggplot(aes(x = Island, y = Species)) +
@@ -263,81 +194,62 @@ p <- gala2 |>
                                    hjust = 1, vjust = 0.5))
 ```
 
-### Plot
 
-```{r}
-p
-```
-
-:::
-
-
-## Bar charts for counts
-
-::: {.panel-tabset}
-
-### Code 
-
-Rotating the axes
+## Rotating the axes
 
 ```{r}
 #| echo: true
-p_rotated <- p +
+#| output-location: slide
+gala2 |> 
+  arrange(desc(Species)) |> 
+  mutate(Island = fct_inorder(Island)) |> 
+  ggplot(aes(x = Island, y = Species)) +
+  geom_bar(stat = "identity") +
+  theme(axis.text.x = element_text(angle = 90,
+                                   hjust = 1, vjust = 0.5)) +
   coord_flip()
 ```
 
-### Plot
 
-```{r}
-p_rotated
-```
-
-:::
-
-## Bar charts for counts
-
-::: {.panel-tabset}
-
-### Code 
-
-Reversing the `x` axis
+## Reversing the `x` axis
 
 ```{r}
 #| echo: true
-#| code-line-numbers: "3"
-p_rotated_rev <- p +
+#| output-location: slide
+gala2 |> 
+  arrange(desc(Species)) |> 
+  mutate(Island = fct_inorder(Island)) |> 
+  ggplot(aes(x = Island, y = Species)) +
+  geom_bar(stat = "identity") +
+  theme(axis.text.x = element_text(angle = 90,
+                                   hjust = 1, vjust = 0.5)) +
   coord_flip() +
   scale_x_discrete(limits = rev)
 ```
 
-### Plot
-
-```{r}
-p_rotated_rev
-```
-
-:::
 
 ## Histograms as a special bar chart
 
-::: {.panel-tabset}
-
-### Code 
-
 ```{r}
 #| echo: true
-p <- ggplot(penguins |> drop_na(bill_length_mm),
-            aes(bill_length_mm, color = species)) +
+#| output-location: slide
+ggplot(penguins |> 
+         drop_na(bill_length_mm),
+       aes(bill_length_mm, color = species)) +
   geom_histogram(bins = 30, fill = NA)
 ```
 
-### Plot
+
+## Density plots better with overlap
 
 ```{r}
-p
+#| echo: true
+#| output-location: slide
+ggplot(penguins |> 
+         drop_na(bill_length_mm),
+       aes(bill_length_mm, color = species)) +
+  geom_density()
 ```
-
-:::
 
 
 ## Pivoting data
@@ -381,28 +293,17 @@ penguins_long
 
 ## Plotting long data
 
-::: {.panel-tabset}
-
-### Code
-
 ```{r}
 #| echo: true
-p <- ggplot(penguins_long,
-            aes(x = Type, y = Measure, color = Species)) +
+#| output-location: slide
+ggplot(penguins_long,
+       aes(x = Type, y = Measure, color = Species)) +
   geom_point(position = position_jitter(width = 0.1)) +
   facet_wrap("Species") +
   scale_color_paletteer_d(`"beyonce::X56"`) +
   theme(axis.title.x = element_blank()) +
   labs(y = "Measurement (mm)")
 ```
-
-### Plot
-
-```{r}
-p
-```
-
-:::
 
 
 ## Splitting or Joining Columns {.scrollable}
@@ -467,47 +368,25 @@ M
 
 ## Plotting dates
 
-::: {.panel-tabset}
-
-### Code
-
 ```{r}
 #| echo: true
-p <- ggplot(M, aes(x = Date, y = Count, color = Replicate)) +
+#| output-location: slide
+ggplot(M, aes(x = Date, y = Count, color = Replicate)) +
   geom_point() +
   geom_path() +
   scale_x_date(date_labels = "%m/%d", date_breaks = "1 day")
 ```
 
-### Plot
-
-```{r}
-p
-```
-
-:::
-
 
 ## Plotting dates
-
-::: {.panel-tabset}
-
-### Code
 
 Plot shapes: [https://r-graphics.org/recipe-scatter-shapes](https://r-graphics.org/recipe-scatter-shapes)
 
 ```{r}
 #| echo: true
-p <- ggplot(M, aes(x = Date, y = Count, shape = Replicate)) +
+#| output-location: slide
+ggplot(M, aes(x = Date, y = Count, shape = Replicate)) +
   geom_point(size = 4) +
   scale_shape_manual(values = c(0, 15)) +
   scale_x_date(date_labels = "%m/%d", date_breaks = "1 day")
 ```
-
-### Plot
-
-```{r}
-p
-```
-
-:::
