--- a/Data_visualization/2.2-Faceting.qmd
+++ b/Data_visualization/2.2-Faceting.qmd
@@ -68,71 +68,44 @@ bear |>
 
 ## Dodging points
 
-::: {.panel-tabset}
-
-### Code
-
 - Use the `position` argument to shift a `group`.
   - Set `width` by trial and error
 - Often used with `color`
 
 ```{r}
 #| echo: true
+#| output-location: slide
 #| code-line-numbers: "5-6"
-p <- ggplot(bear,
-            aes(x = BearID,
-                y = log_Move,
-                color = DayNight,
-                group = DayNight)) +
+ggplot(bear,
+       aes(x = BearID,
+           y = log_Move,
+           color = DayNight,
+           group = DayNight)) +
   geom_point(position = position_dodge(width = 0.2))
 ```
 
-### Plot
-
-```{r}
-p
-```
-
-:::
-
 
 ## Dodging points with jitter
-
-::: {.panel-tabset}
-
-### Code
 
 - Use `position = position_jitterdodge`
 - Also set `seed` to make the jitter reproducible
 
 ```{r}
 #| echo: true
+#| output-location: slide
 #| code-line-numbers: "6-8"
-
-p <- ggplot(bear,
-            aes(x = BearID,
-                y = log_Move,
-                color = DayNight,
-                group = DayNight)) +
+ggplot(bear,
+       aes(x = BearID,
+           y = log_Move,
+           color = DayNight,
+           group = DayNight)) +
   geom_point(position = position_jitterdodge(jitter.width = 0.15,
                                              dodge.width = 0.3,
                                              seed = 34683))
 ```
 
-### Plot
-
-```{r}
-p
-```
-
-:::
-
 
 ## Dodging points with jitter
-
-::: {.panel-tabset}
-
-### Code
 
 Further refinements:
 
@@ -140,40 +113,28 @@ Further refinements:
 
 ```{r}
 #| echo: true
+#| output-location: slide
 #| code-line-numbers: "9"
-
-p <- ggplot(bear,
-            aes(x = BearID,
-                y = log_Move,
-                color = DayNight,
-                group = DayNight)) +
+ggplot(bear,
+       aes(x = BearID,
+           y = log_Move,
+           color = DayNight,
+           group = DayNight)) +
   geom_point(position = position_jitterdodge(jitter.width = 0.15,
                                              dodge.width = 0.3,
                                              seed = 34683),
              alpha = 0.25)
 ```
 
-### Plot
-
-```{r}
-p
-```
-
-:::
-
 
 ## Dodging bar graphs
-
-::: {.panel-tabset}
-
-### Code
 
 `width = 0.9` leaves no space between bars but leaves space between `BearID`s.
 
 ```{r}
 #| echo: true
-
-p <- bear |> 
+#| output-location: slide
+bear |> 
   group_by(BearID, Season) |> 
   summarize(Mean_log_Move = mean(log_Move),
             .groups = "drop") |> 
@@ -184,14 +145,6 @@ p <- bear |>
   geom_bar(stat = "identity",
            position = position_dodge(width = 0.9))
 ```
-
-### Plot
-
-```{r}
-p
-```
-
-:::
 
 
 ## Faceting
@@ -206,23 +159,19 @@ Good for focusing on comparisons among measurements
 
 ## Faceting in rows
 
-::: {.panel-tabset}
-
-### Code
-
 `.` is a placeholder for faceting only by row or column
 
 Facet in rows by `Season`:
 
 ```{r}
 #| echo: true
+#| output-location: slide
 #| code-line-numbers: "10"
-
-p <- ggplot(bear,
-            aes(x = BearID,
-                y = log_Move,
-                color = DayNight,
-                group = DayNight)) +
+ggplot(bear,
+       aes(x = BearID,
+           y = log_Move,
+           color = DayNight,
+           group = DayNight)) +
   geom_point(position = position_jitterdodge(jitter.width = 0.15,
                                              dodge.width = 0.3,
                                              seed = 34683),
@@ -230,30 +179,18 @@ p <- ggplot(bear,
   facet_grid(Season ~ .)
 ```
 
-### Plot
-
-```{r}
-p
-```
-
-:::
-
 
 ## Faceting in columns
 
-::: {.panel-tabset}
-
-### Code
-
 ```{r}
 #| echo: true
+#| output-location: slide
 #| code-line-numbers: "10"
-
-p <- ggplot(bear,
-            aes(x = BearID,
-                y = log_Move,
-                color = DayNight,
-                group = DayNight)) +
+ggplot(bear,
+       aes(x = BearID,
+           y = log_Move,
+           color = DayNight,
+           group = DayNight)) +
   geom_point(position = position_jitterdodge(jitter.width = 0.15,
                                              dodge.width = 0.3,
                                              seed = 34683),
@@ -261,30 +198,18 @@ p <- ggplot(bear,
   facet_grid(. ~ Season)
 ```
 
-### Plot
-
-```{r}
-p
-```
-
-:::
-
 
 ## Faceting in rows and columns
 
-::: {.panel-tabset}
-
-### Code
-
 ```{r}
 #| echo: true
+#| output-location: slide
 #| code-line-numbers: "10"
-
-p <- ggplot(bear,
-            aes(x = BearID,
-                y = log_Move,
-                color = DayNight,
-                group = DayNight)) +
+ggplot(bear,
+       aes(x = BearID,
+           y = log_Move,
+           color = DayNight,
+           group = DayNight)) +
   geom_point(position = position_jitterdodge(jitter.width = 0.15,
                                              dodge.width = 0.3,
                                              seed = 34683),
@@ -292,48 +217,28 @@ p <- ggplot(bear,
   facet_grid(Season ~ DayNight)
 ```
 
-### Plot
-
-```{r}
-p
-```
-
-:::
-
 
 ## Wrapping facets
 
 Number of rows (`nrow`) or columns (`ncol`) can be specified
 
-::: {.panel-tabset}
-
-### Code
-
 Wrapping by `BearID` with `facet_wrap()`:
 
 ```{r}
 #| echo: true
+#| output-location: slide
 #| code-line-numbers: "10"
-
-p <- ggplot(bear,
-            aes(x = Season,
-                y = log_Move,
-                color = DayNight,
-                group = DayNight)) +
+ggplot(bear,
+       aes(x = Season,
+           y = log_Move,
+           color = DayNight,
+           group = DayNight)) +
   geom_point(position = position_jitterdodge(jitter.width = 0.15,
                                              dodge.width = 0.3,
                                              seed = 34683),
              alpha = 0.25) +
   facet_wrap("BearID")
 ```
-
-### Plot
-
-```{r}
-p
-```
-
-:::
 
 
 ## Axis ranges
@@ -359,54 +264,31 @@ bear_long
 
 ## Default equal axis scale
 
-::: {.panel-tabset}
-
-### Code
-
 ```{r}
 #| echo: true
-
-p <- ggplot(bear_long,
-            aes(x = BearID,
-                y = value)) +
+#| output-location: slide
+ggplot(bear_long,
+       aes(x = BearID,
+           y = value)) +
   geom_point(position = position_jitter(width = 0.2,
                                         seed = 4527345),
              alpha = 0.25) +
   facet_grid(Measurement ~ Season)
 ```
 
-### Plot
-
-```{r}
-p
-```
-
-:::
-
 
 ## With free axis scale
 
-::: {.panel-tabset}
-
-### Code
-
 ```{r}
 #| echo: true
+#| output-location: slide
 #| code-line-numbers: "7"
-
-p <- ggplot(bear_long,
-            aes(x = BearID,
-                y = value)) +
+ggplot(bear_long,
+       aes(x = BearID,
+           y = value)) +
   geom_point(position = position_jitter(width = 0.2,
                                         seed = 4527345),
              alpha = 0.25) +
   facet_grid(Measurement ~ Season, scales = "free_y")
 ```
 
-### Plot
-
-```{r}
-p
-```
-
-:::
